Refactor dependencies and improve error handling
- Fix SonarQube warnings
- Organized dependencies in build.gradle.kts into categories for better readability.
- Introduced a new libs.versions.toml file for managing library versions.
- Enhanced error handling in various services, replacing RuntimeExceptions with more specific exceptions.
- Improved JWT authentication filter logging for invalid tokens.
- Updated dataset upload logic to validate file formats and handle exceptions more gracefully.
- Refactored exception handling in GlobalExceptionHandler to provide more structured error responses.
- Added validation annotations to DTOs for better input validation.